--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "name": "gatsby-starter-typescript",
-  "description": "Gatsby TypeScript starter",
+  "name": "adamhopkins.dev",
+  "description": "adamhopkins.dev Gatsby site",
   "version": "1.0.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@types/node": "^8.0.7",
-    "@types/react": "15.0.21",
+    "@types/react": "17.0.0",
     "@types/react-dom": "0.14.23",
-    "gatsby": "^1.9.119",
-    "gatsby-link": "^1.6.28",
-    "gatsby-plugin-react-helmet": "^1.0.8",
-    "gatsby-plugin-typescript": "^1.4.10"
+    "babel-plugin-styled-components": "^1.12.0",
+    "gatsby": "^2.27.4",
+    "gatsby-image": "^2.4.17",
+    "gatsby-plugin-react-helmet": "^3.5.0",
+    "gatsby-plugin-styled-components": "^3.5.0",
+    "gatsby-plugin-typescript": "^2.7.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "styled-components": "^5.2.1"
   },
   "keywords": [
     "gatsby, typescript"
@@ -18,16 +24,14 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
+    "build": "cross-env NODE_OPTIONS=\"-r esm\" gatsby build",
+    "start": "cross-env NODE_OPTIONS=\"-r esm\" gatsby develop",
     "format": "prettier --parser typescript --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.ts*\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.8.2"
-  },
-  "contributors": [
-    "fabien0102 <fabien0102@gmail.com>",
-    "Hays Clark <hays.clark@gmail.com>"
-  ]
+    "prettier": "^1.19.1",
+    "cross-env": "^7.0.2",
+    "esm": "^3.2.25"
+  }
 }
