--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,12 @@
         "sourceMap": true,
         "noImplicitAny": true,
         "module": "commonjs",
-        "target": "esnext",
+        "esModuleInterop": true,
+        "moduleResolution": "node",
+        "skipLibCheck": true,
+        "target": "es2015",
         "jsx": "react",
-        "lib": ["dom", "es2015", "es2017"]
+        "lib": ["dom", "es6", "es2017"]
     },
     "include": [
         "./src/**/*"
