--- a/package.json
+++ b/package.json
@@ -27,12 +27,62 @@
     "build": "cross-env NODE_OPTIONS=\"-r esm\" gatsby build",
     "start": "cross-env NODE_OPTIONS=\"-r esm\" gatsby develop",
     "format": "prettier --parser typescript --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.ts*\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
+  },
+  "jest": {
+    "globals": {
+      "__LINK_PREFIX__": "",
+      "__PREFIX_LINKS__": ""
+    },
+    "transform": {
+      ".(ts|tsx)": "<rootDir>/jest-preprocess.js"
+    },
+    "moduleNameMapper": {
+      ".+\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/file-mock.js"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/public/",
+      "/templates/",
+      "/.cache"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!(gatsby)/)"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx"
+    ],
+    "collectCoverage": false,
+    "coverageReporters": [
+      "lcov",
+      "text",
+      "html"
+    ],
+    "testURL": "http://localhost",
+    "setupFiles": [
+      "<rootDir>/loadershim.js"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/setup-test-env.js"
+    ]
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.12.7",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@types/jest": "^26.0.16",
     "@types/react-helmet": "^6.1.0",
+    "babel-jest": "^26.6.3",
+    "babel-preset-gatsby": "^0.8.0",
     "cross-env": "^7.0.2",
     "esm": "^3.2.25",
-    "prettier": "^1.19.1"
+    "jest": "^26.6.3",
+    "jest-styled-components": "^7.0.3",
+    "prettier": "^1.19.1",
+    "typescript": "^4.1.2"
   }
 }
