--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@testing-library/react": "^11.2.2",
     "@types/jest": "^26.0.16",
     "@types/react-helmet": "^6.1.0",
+    "@types/styled-components": "^5.1.4",
     "babel-jest": "^26.6.3",
     "babel-preset-gatsby": "^0.8.0",
     "cross-env": "^7.0.2",
