--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react": "17.0.0",
     "@types/react-dom": "0.14.23",
     "babel-plugin-styled-components": "^1.12.0",
+    "framer-motion": "^2.9.5",
     "gatsby": "^2.27.4",
     "gatsby-image": "^2.4.17",
     "gatsby-plugin-react-helmet": "^3.5.0",
@@ -16,7 +17,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.2.1"
+    "react-icons": "^4.1.0",
+    "styled-components": "^5.2.1",
+    "styled-reset": "^4.3.3"
   },
   "keywords": [
     "gatsby, typescript"
