--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "babel-plugin-styled-components": "^1.12.0",
     "framer-motion": "^3.1.4",
     "gatsby": "^2.27.4",
-    "gatsby-image": "^2.4.17",
+    "gatsby-image": "^2.11.0",
     "gatsby-plugin-react-helmet": "^3.5.0",
+    "gatsby-plugin-sharp": "^2.14.0",
     "gatsby-plugin-styled-components": "^3.5.0",
     "gatsby-plugin-typescript": "^2.7.0",
+    "gatsby-source-filesystem": "^2.11.0",
+    "gatsby-transformer-sharp": "^2.12.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
